# emd-desafio-devops

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  README.md  docker-compose.yaml  index.html  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: cd-dev.yml  cd.yml  docs.yml  lint.yml
app/: index.html
docs/: app.md  index.md
scripts/: run_isort.sh  run_semgrep.sh  run_test.sh  scope.sh
search/: search_index.json
src/: app.py
src/templates/: hello.html  word_art.html
tests/: test_api.py
